Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-16341

Wrong length for USER columns in performance_schema tables

    XMLWordPrintable

Details

    Description

      The USER columns in the performance_schema tables have a length of 16 but should have 80 (the maximum allowed user name length). As far as I've seen this affects the following tables:

      • accounts
      • events_stages_summary_by_account_by_event_name
      • events_stages_summary_by_user_by_event_name
      • events_statements_summary_by_account_by_event_name
      • events_statements_summary_by_user_by_event_name
      • events_waits_summary_by_account_by_event_name
      • events_waits_summary_by_user_by_event_name
      • setup_actors
      • threads (column PROCESSLIST_USER)
      • users

      Attachments

        Activity

          People

            serg Sergei Golubchik
            dnt dnt
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.5h
                0.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.