MDEV-16341 Wrong length for USER columns in performance_schema tables

use USERNAME_CHAR_LENGTH and HOSTNAME_LENGTH for perfschema
USER and HOST columns