storage/perfschema/table_esgs_by_host_by_event_name.cc
@@ -50,7 +50,7 @@ table_esgs_by_host_by_event_name::m_share=
   sizeof(pos_esgs_by_host_by_event_name),
   &m_table_lock,
   { C_STRING_WITH_LEN("CREATE TABLE events_stages_summary_by_host_by_event_name("
-                      "HOST CHAR(60) collate utf8_bin default null,"
+                      "HOST CHAR(" STRINGIFY_ARG(HOSTNAME_LENGTH) ") collate utf8_bin default null,"
                       "EVENT_NAME VARCHAR(128) not null,"
                       "COUNT_STAR BIGINT unsigned not null,"
                       "SUM_TIMER_WAIT BIGINT unsigned not null,"
